# NSG-single

./: .gitignore  CMakeLists.txt  README.md  main.cpp
examples/: main.cc
glass/: graph.hpp  searcher.hpp  utils.hpp
glass/nsg/: nndescent.hpp  nsg.hpp
nsg/: builder.hpp  common.hpp  graph.hpp  memory.hpp  neighbor.hpp  searcher.hpp  utils.hpp
nsg/nsg/: nndescent.hpp  nsg.hpp
nsg/quant/: fp32_quant.hpp  quant.hpp  sq4_quant.hpp  sq8_quant.hpp
nsg/simd/: avx2.hpp  avx512.hpp  distance.hpp
